--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,15 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MultiPlayerActivity"></activity>
+
+        <!--Meta-data from button clicker -->
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+            android:value="@string/app_id"/>
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
+        <activity android:name=".MultiPlayerActivity"
+            android:label="@string/app_name"></activity>
         <activity android:name=".SinglePlayerActivity" />
         <activity android:name=".MenuActivity">
             <intent-filter>
