--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //new dependencies to support multi-player. Installation tip: File->ProjectStructure->App->Dependencies
     implementation 'com.google.android.gms:play-services:12.0.1'
-    //Solve version incompatibility issue
+    //Solves version incompatibility issue
     implementation 'com.android.support:mediarouter-v7:27.1.1'
     //to solve dex error
     implementation 'com.android.support:multidex:1.0.3'
