--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,21 @@
         <activity android:name=".Controllers.MultiPlayerActivity"
             android:label="@string/app_name"></activity>
         <activity android:name=".Controllers.SinglePlayerActivity" />
-        <activity android:name=".Controllers.MenuActivity">
+
+        <activity android:name=".Controllers.Loading">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Controllers.MenuActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
